--- a/.github/workflows/kbe_integration.yml
+++ b/.github/workflows/kbe_integration.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install chess pytest pytest-cov
-        pip install -e .
+        pip install -r requirements.txt
+        pip install pytest pytest-cov
 
     - name: Run KBE integration tests (with mocks)
       run: |
